# sfml_demo

./: .clang-format  CMakeLists.txt  main.cpp  main_player_test.cpp  main_test.cpp
include/: body.hpp  manual_controller.hpp  sfml_random.hpp  transform.hpp  utils.hpp  world_physics.hpp
